# tfreport

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  terraform-apply.yml  terraform-plan.yml
examples/: .tfreport.yml  sample-report-avm.md  sample-report.md
examples/azure-devops/: azure-pipelines.yml
examples/github-actions/: README.md
examples/gitlab/: .gitlab-ci.yml
scripts/: gh-actions-cleanup.ps1
src/tfreport/: __init__.py  apply.py  compliance.py  config.py  cost.py  delta.py  diff.py  drift.py  graph.py  history.py  narrative.py  plan.py  policy.py  provenance.py  risk_rules.py  rollback.py  routing.py  viz.py
src/tfreport/exporters/: __init__.py  html.py  sarif.py  slack.py  teams.py
tests/: test_compliance.py  test_exporters.py  test_graph.py  test_history.py  test_policy.py  test_routing_rollback.py  test_summarize_apply.py  test_summarize_plan.py  test_tier123.py  test_viz.py
tests/fixtures/: blast_radius.json  compliance_fail.json  destroys.json  mixed.json  noop.json  policy.json  with_modules.json
